--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,17 @@
 
 <!DOCTYPE html>
+<html>
 <head>
 	<title>Learning AngularJS</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 	<script src="js/core.js" type="text/javascript"></script>
-	<script src="js/controller/maincontroller.js" type="text/javascript"></script>
+    <script src="js/controller/maincontroller.js" type="text/javascript"></script>
+
 </head>
 <body>
 	<div id='content' ng-app='MainForm' ng-controller='MainController'>
-			{{understand}}
+			<p>{{understand}}</p>
+            <button ng-click="sendCall()">Button </button>
 	</div>
 </body>
 </html>
