--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,17 @@
 </head>
 <body>
 	<div id='content' ng-app='MainForm' ng-controller='MainController'>
-			<p>{{understand}}</p>
-            <button ng-click="sendCall()">Button </button>
-	</div>
+			<p>{{understand}} </p>
+        <form novalidate class="simple-form">        
+          Name: <input type = "text" ng-model = "user.name"><br />
+          Email: <input type = "text" ng-model = "user.email"><br />
+          Position: <input type = "text" ng-model = "user.position"><br />
+          Description: <input type = "text" ng-model = "user.description"><br />
+          Operating System Environment: <input type = "text" ng-model = "user.OS"><br />
+          Text Editor Environment: <input type = "text" ng-model = "user.editor"><br />
+          
+            <button ng-click="sendCall(user)">Button </button>
+
+    </div>
 </body>
 </html>
