--- a/public/index.html
+++ b/public/index.html
@@ -14,36 +14,17 @@
 		</style>
 		
 		<!-- JS -->
-
-		<script>
-		// create angular app
-		var validationApp = angular.module('validationApp', []);
-
-		// create angular controller
-		validationApp.controller('mainController', function($scope) {
-			// function to submit the form after all validation has occurred			
-			$scope.submitForm = function(isValid) {
-
-				// check to make sure the form is completely valid
-				if (isValid) { 
-					alert('our form is amazing');
-				}
-			};
-		});
-		</script>
 	</head>
-<body ng-app="MainForm" ng-controller="MainController">
-<div class="container">
+    <body ng-app="MainForm" ng-controller="MainController">
+    <div class="container">
     
     <!-- PAGE HEADER -->
-    <div class="page-header"><h1>Software Developer and Test Engineer Application</h1></div>
+    <div class="page-header">
+        <h1>Software Developer and Test Engineer Application</h1>
+    </div>
    
-    <!-- =================================================================== -->
-    <!-- FORM ============================================================== -->
-    <!-- =================================================================== -->
-    
-    <!-- pass in the variable if our form is valid or invalid -->
-    <form name="userForm" ng-submit="sendForm(userForm.$valid)" novalidate>
+    <!-- FORM -->
+    <form name="userForm" ng-show="userForm" ng-submit="sendForm(userForm.$valid)" novalidate>
 
         <!-- USERNAME -->
         <div class="form-group" ng-class="{ 'has-error' : userForm.username.$invalid && !userForm.username.$pristine }">
