--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 		<script src="js/core.js" type="text/javascript"></script>
 		    
-		<script src="js/controller/maincontroller.js" type="text/javascript"></script>
-    	<script src="js/service/mainservice.js" type="text/javascript"></script>
+		<script src="js/controller/core.js" type="text/javascript"></script>
+    	<script src="js/formObject/formController.js" type="text/javascript"></script>
+    	<script src="js/formObject/formService.js" type="text/javascript"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<style>
