--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Learning AngularJS</title>
+		<title>AppTruth Home Page</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 		<script src="js/core.js" type="text/javascript"></script>
 		    
@@ -17,7 +17,7 @@
 <body ng-app="MainForm">
 <div class="container">
     <!-- PAGE HEADER -->
-    <div class="page-header"><h1>Software Developer and Test Engineer Application</h1></div>
+    <div class="page-header"><h1>AppTruth</h1></div>
     <ng-view></ng-view>
 </div>
 </body>
