--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
 		<!--Angular configuration -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 		<script src="js/core.js" type="text/javascript"></script>
+		<a href="/api/testForm">Visit W3Schools</a>
+
+		<a href="/api/devForm">Visit W3Schools</a>
+		
+		<a href="/dev">Dev page </a>
+	
+		<a href="/test">Test page</a>
+		<a href="/pm">PM page </a>
+		<a href="/mark">Marketing page</a>
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
