First functional controller/service with the dev form created. Moving on to the rest, then expanding the API to call into mongoose through http

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
 		<base href="/">
 		<!--Angular configuration -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
-		<script src="js/core.js" type="text/javascript"></script>
+				
+						<script src="js/core.js" type="text/javascript"></script>
+				<script src="js/services/devService.js" type="text/javascript"></script>
+		<script src="js/controllers/devControl.js" type="text/javascript"></script>		
+
+		
+
 		<a href="/api/testForm">Visit W3Schools</a>
 
 		<a href="/api/devForm">Visit W3Schools</a>
