All Roles now have functional forms and functional backend

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,18 @@
         <script src="js/services/testService.js" type="text/javascript"></script>
         <script src="js/services/devService.js" type="text/javascript"></script>
         <script src="js/services/pmService.js" type="text/javascript"></script>
+        <script src="js/services/busService.js" type="text/javascript"></script>
+        <script src="js/services/markService.js" type="text/javascript"></script>
+
         
         
         <!--Load all controllers -->  	
         <script src="js/controllers/testControl.js" type="text/javascript"></script>		
 	    <script src="js/controllers/devControl.js" type="text/javascript"></script>	
 	    <script src="js/controllers/pmControl.js" type="text/javascript"></script>	
+	    <script src="js/controllers/busControl.js" type="text/javascript"></script>	
+	    <script src="js/controllers/markControl.js" type="text/javascript"></script>	
+
 			
 
 
@@ -30,7 +36,8 @@
 	
 		<a href="/test">Test page</a>
 		<a href="/pm">PM page </a>
-		<a href="/mark">Marketing page</a>
+	<a href="/mark">Marketing page</a>	
+<a href="/bus">Business page</a>
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
