Confirm page after successful form send

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 		<link href = "views/bootstrap/css/bootstrap.min.css" rel = "stylesheet">
 		<link href = "views/bootstrap/css/bootstrap.theme.min.css" rel = "stylesheet">
 		<link href = "views/bootstrap/css/bootstrap.css" rel = "stylesheet">
+        <style>
+        .confirm {
+            text-align: center;
+            font-family:"Times New Roman", sans-serif; 
+        }
+        </style>
 		<!--link href = "css/styles.css" rel = "stylesheet"-->
 		<base href="/">
 		
