--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
 <!-- Some JQuery and Angular in case we need it -->
 <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
-<script src="js/core.js"></script>
 
+<script src="js/core.js"></script>
+<script type="text/javascript" src="js/livejs.js"></script>
 <head>
 
 <title>App Truth</title>
